--- a/components/ColorSpectrum/ColorSpectrum.scss
+++ b/components/ColorSpectrum/ColorSpectrum.scss
@@ -7,10 +7,10 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 4px;
-  background: rgba(255, 255, 255, 0.03);
+  background: rgb(255 255 255 / 3%);
   padding: 4px;
 
-  @media (max-width: 1024px) {
+  @media (width <= 1024px) {
     grid-template-columns: 1fr;
   }
 
@@ -49,7 +49,7 @@
 
     &:hover {
       transform: translateX(-8px);
-      box-shadow: 8px 8px 0 rgba(255, 255, 255, 0.1);
+      box-shadow: 8px 8px 0 rgb(255 255 255 / 10%);
     }
 
     &--purple,
@@ -78,24 +78,31 @@
 .strip--yellow {
   background: vars.$color-yellow;
 }
+
 .strip--orange {
   background: vars.$color-orange;
 }
+
 .strip--red {
   background: vars.$color-red;
 }
+
 .strip--pink {
   background: vars.$color-pink;
 }
+
 .strip--purple {
   background: vars.$color-purple;
 }
+
 .strip--blue {
   background: vars.$color-blue;
 }
+
 .strip--green {
   background: vars.$color-green;
 }
+
 .strip--gray {
   background: vars.$color-gray;
 }
